--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Booklio – AI-powered DM booking automation for Instagram & TikTok" />
-    <title>Booklio – Automate Your Bookings with AI</title>
+    <meta name="description" content="Convly – AI-powered DM booking automation for Instagram & TikTok" />
+    <title>Convly – Automate Your Bookings with AI</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
